# tellur

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.tmp  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  deny.toml  install.ps1  install.sh  package-lock.json  package.json  rust-toolchain.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml  tellur.yml  tracelens.yml
.tellur/: config.yml
.tellur/policies/: default.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: aider.rs  antigravity.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  copilot.rs  cursor.rs  devin.rs  gemini.rs  generic.rs  import.rs  jetbrains.rs  lib.rs  sanitize.rs  windsurf.rs
crates/cli/: Cargo.toml
crates/cli/src/: capture.rs  cli.rs  connect.rs  git.rs  hooks.rs  hub.rs  inspect.rs  main.rs  maintain.rs  notes.rs  onboarding.rs  policy.rs  push.rs  repo.rs  serve.rs  service.rs  setup.rs  util.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  glob.rs  lib.rs  main.rs  notes.rs
crates/core/src/adapter/: builtin.rs  mod.rs
crates/core/src/attribution/: engine.rs  mod.rs
crates/core/src/daemon/: mod.rs  webhook.rs
crates/core/src/export/: mod.rs
crates/core/src/mcp/: mod.rs
crates/core/src/policy/: mod.rs
crates/core/src/redaction/: mod.rs
crates/core/src/remap/: mod.rs
crates/core/src/report/: mod.rs  pr_report.rs  team_report.rs
crates/core/src/schema/: ids.rs  mod.rs  types.rs
crates/core/src/storage/: event_log.rs  export.rs  file_watcher.rs  index.rs  mod.rs  repo.rs
crates/core/tests/: core_cli.rs
crates/server/: Cargo.toml  LICENSE  build.rs
crates/server/src/: api.rs  app.rs  auth.rs  config.rs  dashboard.rs  error.rs  github_app.rs  github_webhook.rs  jobs.rs  lib.rs  main.rs  metrics.rs  oidc.rs  ratelimit.rs  review.rs  scim.rs  source.rs
crates/server/src/api/: analytics.rs  common.rs  device.rs  exports.rs  mod.rs  policies.rs  rbac.rs  repos.rs  sessions.rs  sso.rs
crates/server/src/storage/: chain.rs  mod.rs  postgres.rs  sqlite.rs
crates/server/src/storage/postgres/: audit.rs  auth_sessions.rs  events.rs  jobs.rs  mod.rs  orgs.rs  policy.rs  repos.rs  schema.rs  scim.rs
crates/server/src/storage/sqlite/: audit.rs  auth_sessions.rs  events.rs  jobs.rs  mod.rs  orgs.rs  policy.rs  repos.rs  schema.rs  scim.rs
crates/server/tests/: attribution.rs  auth_api.rs  cli.rs  dashboard_api.rs  dashboard_routes.rs  device.rs  github_webhook.rs  health.rs  ingest.rs  jobs.rs  oidc.rs  policy_export.rs  postgres.rs  read.rs  repo_rbac.rs  scim.rs  source.rs
crates/server/tests/data/: github_app_test_key.pem.b64
crates/server/ui/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/server/ui/e2e/: dashboard.spec.ts
crates/server/ui/src/: App.svelte  app.css  main.ts
crates/server/ui/src/components/: AppShell.svelte  CommandPalette.svelte  SourceConnection.svelte  Trend.svelte
crates/server/ui/src/lib/: api.ts  commands.test.ts  commands.ts  density.test.ts  density.ts  format.test.ts  format.ts  i18n.svelte.ts  i18n.test.ts  i18n.ts  router.test.ts  router.ts  series.test.ts  series.ts  source.test.ts  source.ts  theme.test.ts  theme.ts  timeline.test.ts  timeline.ts
crates/server/ui/src/screens/: Audit.svelte  Exports.svelte  FileView.svelte  Overview.svelte  People.svelte  Policies.svelte  RepoDetail.svelte  Repos.svelte  SessionDetail.svelte  Sessions.svelte
docs/: ADAPTERS.md  FINDINGS.md  GITHUB_APP_SETUP.md  GUI_COMPATIBILITY.md  THREAT_MODEL.md
docs/examples/: README.md  github-actions-team-report.yml
docs/proposals/: GITHUB_APP.md  LICENSING.md  TEAM_DASHBOARD_UI.md  TEAM_SERVER_IMPLEMENTATION.md  TEAM_SERVER_MODE.md
docs/security/: AIKIDO_2026_07_13.md
editor/tellur-jetbrains/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editor/tellur-jetbrains/src/main/kotlin/dev/tellur/jetbrains/: TellurHookRunner.kt  TellurSettings.kt  TellurSettingsConfigurable.kt  TellurVfsListener.kt
editor/tellur-jetbrains/src/test/kotlin/dev/tellur/jetbrains/: TellurHookRunnerTest.kt
editor/tellur-vscode/: .vscodeignore  LICENSE  package-lock.json  package.json
editor/tellur-vscode/src/: client.ts  commands.ts  decorations.ts  editorIdentity.ts  extension.ts  modelMetadata.ts  vscodeModels.ts
editor/tellur-vscode/src/providers/: attribution.ts  sessions.ts
editor/tellur-vscode/src/test/: runTest.ts  unit.ts
editor/tellur-vscode/src/test/suite/: editorIdentity.test.ts  extension.test.ts  harness.ts  index.ts  modelMetadata.test.ts
editor/tracegit-vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
editor/tracegit-vscode/src/: client.ts  commands.ts  decorations.ts  extension.ts
editor/tracegit-vscode/src/providers/: attribution.ts  sessions.ts
schemas/: tellur.attribution.v1.json  tellur.event.v1.json  tellur.pr-report.v1.json  tellur.provenance.v1.json  tellur.session.v1.json  tracegit.attribution.v1.json  tracegit.event.v1.json  tracegit.pr-report.v1.json  tracegit.provenance.v1.json  tracegit.session.v1.json
web/: index.html
