[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/adapters",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sydneyvb-nl/TraceGit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
walkdir = "2"
async-trait = "0.1"
