[package]
name = "tellur-adapters"
version = "0.1.0"
edition = "2024"
description = "Tellur AI tool adapters"

[dependencies]
tellur-core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
