[package]
name = "tracegit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TraceGit CLI — AI code provenance from the terminal"

[[bin]]
name = "tracegit"
path = "src/main.rs"

[dependencies]
tracegit-core = { path = "../core" }
tracegit-adapters = { path = "../adapters" }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
notify = "6"
ctrlc = "3"
