[package]
name = "tellur-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tellur CLI — AI code provenance from the terminal"

[[bin]]
name = "tellur"
path = "src/main.rs"

[dependencies]
tellur-core = { path = "../core" }
tellur-adapters = { path = "../adapters" }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
notify = "6"
ctrlc = "3"
# Small blocking HTTP client for the hub commands (`tellur login`, `push`,
# `policy pull`). The `tls` feature enables HTTPS via rustls + webpki-roots —
# the same crates the server already pulls in for OIDC — so remote hubs work out
# of the box; loopback hubs can still use plain http.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
