[package]
name = "tellur-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
# NOTE: this crate is licensed differently from the Apache-2.0 core.
# See crates/server/LICENSE (Functional Source License, FSL-1.1-ALv2).
license-file = "LICENSE"
description = "Tellur team/server hub (self-hostable). Source-available under FSL-1.1-ALv2."
# Not published to crates.io (application crate under a source-available license).
publish = false

[[bin]]
name = "tellur-server"
path = "src/main.rs"

[dependencies]
tellur-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = { workspace = true }
clap = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
# Postgres backend (sync client + pool; NoTls — front with a TLS proxy).
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
# OIDC SSO: HTTPS client for IdP discovery/token exchange (rustls TLS), plus
# base64url + sha2 for PKCE and ID-token (JWT) decoding.
ureq = { version = "2", features = ["tls", "json"] }
base64 = "0.22"
sha2 = "0.10"
# GitHub App installation tokens for the private-repo source proxy (B1): sign the
# App JWT (RS256) that is exchanged for a short-lived, per-repo installation token.
jsonwebtoken = "9"
# Team dashboard SPA: embed built assets into the binary (feature `dashboard`).
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[features]
default = ["dashboard"]
# Serve the team dashboard SPA from `/app` (assets embedded from `ui/dist`).
dashboard = ["dep:rust-embed", "dep:mime_guess"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tellur-core = { path = "../core" }
base64 = "0.22"
